--- a/SwiftRedux/App/components/AddTodo/AddTodo.xib
+++ b/SwiftRedux/App/components/AddTodo/AddTodo.xib
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddTodo" customModule="SwiftRedux2" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddTodo" customModule="SwiftRedux" customModuleProvider="target">
             <connections>
                 <outlet property="textField" destination="RRC-ep-Qbh" id="B44-Pa-RaJ"/>
             </connections>
