--- a/SwiftRedux/App/components/TodoFilterSelection/SelectTodoFilter.xib
+++ b/SwiftRedux/App/components/TodoFilterSelection/SelectTodoFilter.xib
@@ -1,15 +1,39 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SelectTodoFilter" customModule="SwiftRedux" customModuleProvider="target">
+            <connections>
+                <outlet property="filterSelect" destination="Q0c-3k-Q2I" id="iS7-gH-3qc"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Q0c-3k-Q2I">
+                    <rect key="frame" x="8" y="15" width="584" height="29"/>
+                    <segments>
+                        <segment title="Todo"/>
+                        <segment title="Done"/>
+                        <segment title="All"/>
+                    </segments>
+                    <connections>
+                        <action selector="setFilter:" destination="-1" eventType="valueChanged" id="aiZ-Lh-xEt"/>
+                    </connections>
+                </segmentedControl>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="Q0c-3k-Q2I" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="Cra-aI-f03"/>
+                <constraint firstItem="Q0c-3k-Q2I" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="H1X-Fo-gQ0"/>
+                <constraint firstItem="Q0c-3k-Q2I" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="H7S-Oc-qwq"/>
+            </constraints>
         </view>
     </objects>
 </document>
