--- a/SwiftRedux/App/components/TodoList/TodoList.xib
+++ b/SwiftRedux/App/components/TodoList/TodoList.xib
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TodoList" customModule="SwiftRedux2" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TodoList" customModule="SwiftRedux" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="q9r-9N-w4Q" id="sDD-bI-DKx"/>
             </connections>
